# igzip

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  build.sh  build_native.sh  emake.ini  emake_win64.ini  igzip.am  igzip.mak  pom.xml
.github/workflows/: build.yml
benchmarks/: pom.xml
benchmarks/src/main/java/com/github/caoli5288/igzip/: Benchmarks.java  Resources.java
igzip-all/: pom.xml
igzip-java/: pom.xml
igzip-java/src/main/c/: com_github_caoli5288_igzip_IGzip.h  igzip_jni.c
igzip-java/src/main/java/com/github/caoli5288/igzip/: IGzip.java
igzip-linux-amd64/: pom.xml
igzip-windows-amd64/: pom.xml
src/main/c/: com_github_caoli5288_igzip_IGzip.h  igzip_jni.c
src/main/java/com/github/caoli5288/igzip/: IGzip.java
